<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">t7 Home</string>
    <string name="app_version">0.1</string>
    <string name="dummy">Dummy</string>
    <string name="empty"></string>

    <!-- main/login -->
    <string name="main_about_menu_item">Info</string>
    <string name="main_info_msg"><![CDATA[<table border="0"><tr><td>Version:</td><td>{0}</tr><tr><td>Datum:</td><td>{1}</td></tr><tr><td>Autor:</td><td>Thorsten Schenkel</td></tr><tr><td>Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php">www.t7soft.de</td></tr><tr><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>third-party:</td><td><a href="https://icons8.com/">Icons8</td></tr><tr><td></td><td><a href="https://code.google.com/p/smarthome-java-library/"><i>smarthome-java-library</i></td></tr><tr><td></td><td><a href="http://commons.apache.org/">Apache Commons</td></tr></table>]]></string>
    <string name="logon_subtitle">Anmeldung</string>
    <string name="user_data">Benutzerdaten</string>
    <string name="username_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
    <string name="ip_address">IP-Adresse</string>
    <string name="ip_address_explanation">Durch Drücken der rechten Taste auf der SmartHome Zentrale erfährst du die IP-Adresse.</string>
    <string name="keep_in_mind">Anmeldedaten merken</string>
    <string name="logon">Anmelden</string>
    <string name="preference_file_key_logon">de.t7soft.android.t7home.PREFERENCE_LOGON</string>
    <string name="preference_key_logon_keep_in_mind">de.t7soft.android.t7home.PREFERENCE_LOGON_KEEP_IN_MIND</string>
    <string name="preference_key_logon_username">de.t7soft.android.t7home.PREFERENCE_LOGON_USERNAME</string>
    <string name="preference_key_logon_password">de.t7soft.android.t7home.PREFERENCE_LOGON_PASSWORD</string>
    <string name="preference_key_logon_ip_address">de.t7soft.android.t7home.PREFERENCE_LOGON_IP_ADDRESS</string>
    <string name="logon_in_progress">Anmeldung läuft...</string>
    <string name="logon_error_login_failed">Anmeldung ist mit den Anmeldedaten nicht möglich!</string>
    <string name="logon_error_session_expired">Anmeldung ist fehlgeschlagen. Die Session ist abgelaufen.</string>
    <string name="logon_error_technical_exception">Anmeldung ist fehlgeschlagen. Es ist ein technischer Fehler aufgetreten.</string>
    <string name="logon_error_unkown">Anmeldung ist fehlgeschlagen. Es ist ein unbekannter Fehler aufgetreten.</string>
    <string name="ok_button">OK</string>

    <!-- logout -->
    <string name="logout_subtitle">Abmeldung</string>

    <!-- rooms list -->
    <string name="rooms_subtitle">Räume</string>
    <string name="rooms_refresh_menu_item">Aktualisieren</string>
    <string name="rooms_logout_menu_item">Abmelden</string>
    <string name="refresh_in_progress">Aktualisierung läuft...</string>
    <string name="refresh_configuration">Konfiguration wird aktualisiert...</string>
    <string name="refresh_states">Zustände werden aktualisiert...</string>
    <string name="refresh_store">Konfiguration und Zustände werden gespeichert...</string>
    <string name="refresh_error">Aktualisierung ist fehlgeschlagen!</string>
    <string name="refresh_error_session">Aktualisierung ist fehlgeschlagen! Die Session ist abgelaufen.\nNeuanmeldung ist erforderlich.</string>
    
    <!-- room -->
    <string name="room_subtitle">Raum</string>
    <string name="room_temperature_value">Raumtemperatur</string>
    <string name="dummy_temperature_value">\?? °C</string>
    <string name="room_humidity_value">Luftfeuchtigkeit</string>
    <string name="dummy_humidity_value">\?? %</string>
    <string name="preset_temperature_value">Eingestellt Temperatur</string>
    <string name="temperature_mode">Modus</string>
    <string name="temperature_set_error">Temperatur kann nicht eingestellt werden!</string>
    <string name="room_modus">Modus: {0}</string>    
    <string name="on">an</string>    
    <string name="off">aus</string>    
    <string name="heater">Heizung</string>
    <string name="window_door">Fenster / Tür</string>
    <string name="open">auf</string>    
    <string name="closed">zu</string>    
    <string name="sun">Sonne</string>    
    <string name="sunrise">Sonnenaufgang</string>    
    <string name="sunset">Sonnenuntergang</string>   
    <string name="dummy_time_value">\??:\?? Uhr</string> 
    <string name="time_value">{0} Uhr</string> 
    <string name="dummy_shutter_value">\?? %</string>
    <string name="shutter">Rollladen</string>
    <string name="percent_0_value">0 %</string>
    <string name="percent_100_value">100 %</string>
    <string name="shutter_set_error">Rollladen kann nicht eingestellt werden!</string>
    
</resources>