<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewRoomRowHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/row_header_background"
        android:text="@string/heater"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/row_header_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewRoomTemperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_temperature_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewRoomTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_temperature_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewRoomHumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/room_humidity_value" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewRoomHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dummy_humidity_value" />
    </LinearLayout>

</LinearLayout>