<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/row_header_background"
        android:paddingLeft="@dimen/subtitle_paddingX" >

        <ImageView
            android:id="@+id/imageViewRoomListHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/heater"
            android:src="@drawable/ic_s_blue_sun" />

        <TextView
            android:id="@+id/textViewRoomRowHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/room_row_paddingY"
            android:paddingLeft="@dimen/room_row_paddingX"
            android:paddingRight="@dimen/room_row_paddingX"
            android:paddingTop="@dimen/room_row_paddingY"
            android:text="@string/sun"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/row_header_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/room_row_value_paddingY"
        android:paddingLeft="@dimen/room_row_paddingX"
        android:paddingRight="@dimen/room_row_paddingX"
        android:paddingTop="@dimen/room_row_value_paddingY" >

        <TextView
            android:id="@+id/textViewSunriseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_s_blue_sunrise"
            android:text="@string/sunrise"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewSunriseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_time_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/room_row_value_paddingY"
        android:paddingLeft="@dimen/room_row_paddingX"
        android:paddingRight="@dimen/room_row_paddingX"
        android:paddingTop="@dimen/room_row_value_paddingY" >

        <TextView
            android:id="@+id/textViewSunsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_s_blue_sunset"
            android:text="@string/sunset"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewSunsetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_time_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>



</LinearLayout>